--- a/styles/style.css
+++ b/styles/style.css
@@ -2,16 +2,24 @@ html {
 	box-sizing: border-box;
 	height: 100%;
 	width: 100%;
+	margin: 0;
+	padding: 0;
 }
 body {
 	background: #ffffff url('../images/geometry2.png');
 	height: 100%;
 	width: 100%;
+	margin: 0;
+	padding: 0;
 }
-.container {
+
+.main-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	height: 100%;
+	margin: 0 auto;
+	max-width: 800px;
 }
 ul,
 li {
@@ -19,27 +27,33 @@ li {
 	margin: 0;
 	padding: 0;
 }
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 .score-panel {
 	display: flex;
-	/* justify-content: space-between; */
+	justify-content: space-between;
 	align-items: center;
-	width: 350px;
+	width: 250px;
 }
 .stars {
-	width: 15%;
 	display: flex;
 }
 .moves {
-	width: 80%;
+	margin-left: 0.5em;
 }
 .stars li {
 	padding: 1px;
 }
 .deck {
-	width: 660px;
-	height: 660px;
+	margin: 1em;
+	width: 50%;
+	height: 100%;
 	background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-	padding: 32px;
+	padding: 2em;
 	box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
 	display: flex;
 	flex-wrap: wrap;
@@ -49,6 +63,7 @@ li {
 .card {
 	width: 20%;
 	height: 20%;
+	min-height: 40px;
 	padding: 1px;
 	background: #2e3d49;
 	color: #ffffff;
@@ -102,9 +117,6 @@ li {
 	background: red;
 	animation: wiggle 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-.hide {
-	display: none;
-}
 
 .winning-message {
 	display: flex;
@@ -113,4 +125,65 @@ li {
 	transform: translateY(-50%);
 	top: 50%;
 	position: relative;
+}
+.restart {
+	cursor: pointer;
+}
+.hide {
+	display: none;
+}
+
+.start-game {
+	background-color: #02ccba;
+	border-radius: 4px;
+	line-height: 20px;
+}
+
+@media screen and (max-width: 368px) {
+	.main-container {
+		width: 100%;
+		max-width: 360px;
+	}
+	.deck {
+		max-height: 380px;
+		width: 100%;
+		margin: 1em 0;
+		padding: 0;
+	}
+	.card {
+		min-height: 30px;
+		margin: 0.5em;
+	}
+}
+@media screen and (min-width: 369px) and (max-width: 767px) {
+	.main-container {
+		width: 100%;
+		max-width: 370px;
+	}
+	.deck {
+		max-height: 500px;
+		width: initial;
+		padding: 1em;
+	}
+	.card {
+		height: 18%;
+		margin: 0.25em;
+	}
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+	.main-container {
+		width: 100%;
+		max-width: 700px;
+	}
+	.score-panel span {
+		font-size: 1.5em;
+	}
+	.deck {
+		max-height: 600px;
+		width: 90%;
+		padding: 1em;
+	}
+	.card {
+		height: 18%;
+	}
 }
